<resources>
    <string name="app_name">My First Android Project</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="login_heading">Login Screen</string>
    <string name="home_heading">Welcome to Home Screen</string>
    <string name="logout_button">Logout</string>
    <string name="forgot_password">Password Hint</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_message">Hi </string>

</resources>